# terrarust

./: Cargo.toml  README.md
benches/: map.rs
pkg/: index.html
pkg/ressources/: blackpalette.ase  character.ase
pkg/ressources/blocks/: dirt.aseprite  grass.aseprite
pkg/ressources/items/: foliage.ase  log.ase  wood_stick.ase
src/: blocks.rs  chunks.rs  coords.rs  items.rs  lib.rs  loader.rs  map.rs  player.rs  progress_bar.rs  random.rs  textures.rs
