[package]
name = "terrarust"
version = "0.1.0"
authors = ["Mubelotix <mubelotix@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
wasm-game-lib = "0.3"
web-sys = {version="0.3", features=["console", "CanvasGradient"]}
futures = "0.3"
lazy_static = "1.4"
twox-hash = "1.5"